2006-01-27  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* configure.ac:
	* src/trident.h:
	* src/trident_dac.c: (TridentInit), (TridentRestore),
	(TridentSave), (TridentHWCursorInit):
	* src/trident_driver.c: (TRIDENTPreInit), (TRIDENTModeInit):
	Add XGI (aka Trident) Volari XP5 support

2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* man/Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Remove extraneous AC_MSG_RESULT.

2005-11-29  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Only build dlloader modules by default.

2005-11-15  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Add check for DGA extension to fix issues when building with
	separate build roots.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck dependencies to work with separate build roots.